[package]
name = "qwa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
dotenv = "0.15.0"
dotenvy = "0.15.7"
postgres-types = "0.2.9"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = "0.7.13"
tracing-subscriber = "0.3.19"
